--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Desafio 6 - DNC---Backend-Ecommerce",
+  "name": "desafio-6-dnc-backend-ecommerce",
   "version": "1.0.0",
   "description": "Projeto criado para atender o desafio enviado pela DNC como parte do processo de aprendizado",
   "main": "server.ts",
@@ -7,9 +7,17 @@
   "author": "xTirian <tirianx@yahoo.com>",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "build": "tsc"
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -24,6 +32,8 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/swagger-ui-express": "^4.1.6",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
