--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-6-dnc-backend-ecommerce",
+  "name": "desafio-6-dnc",
   "version": "1.0.0",
   "description": "Projeto criado para atender o desafio enviado pela DNC como parte do processo de aprendizado",
   "main": "server.ts",
