fix resolvendo problema do precommit solicitando a tirada do dist do git ignore

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist"
+    "add-build": "git add -f dist"
   },
   "pre-commit": [
     "ts.check",
