--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "xTirian <tirianx@yahoo.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc"
   },
