--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "5.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/swagger-ui-express": "^4.1.6",
+    "prisma": "^5.8.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
