--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "swagger": "node dist/doc/autoGenDoc.js"
   },
   "dependencies": {
     "@prisma/client": "5.8.1",
@@ -19,7 +20,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "@types/morgan": "^1.9.9",
     "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.8.1",
+    "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
